# kattis-haskell

./: CLAUDE.md  README.md  kattis-haskell.cabal
solutions/: ArmyStrength.hs  Ceiling.hs  Different.hs  Pot.hs  Vote.hs
src/: Scanner.hs  ScannerBS.hs
submission/: Main.hs
